--- a/index.html
+++ b/index.html
@@ -52,4 +52,20 @@
 
 </body>
 </html>
-
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/news-flow/?priority=top_stories" rel="noopener nofollow" target="_blank"><span class="blue-text">Top stories by TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
+  {
+  "displayMode": "regular",
+  "feedMode": "all_symbols",
+  "colorTheme": "light",
+  "isTransparent": false,
+  "locale": "en",
+  "width": 400,
+  "height": 550
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
