--- a/index.html
+++ b/index.html
@@ -7,52 +7,7 @@
 <body>
   <h1>Welcome to My GitHub Page</h1>
 
-  <!-- TradingView Widget BEGIN -->
-  <div class="tradingview-widget-container">
-    <div class="tradingview-widget-container__widget"></div>
-    <div class="tradingview-widget-copyright">
-      <a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank">
-        <span class="blue-text">Ticker tape by TradingView</span>
-      </a>
-    </div>
-    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-    {
-      "symbols": [
-        {
-          "proName": "FOREXCOM:SPXUSD",
-          "title": "S&P 500 Index"
-        },
-        {
-          "proName": "FOREXCOM:NSXUSD",
-          "title": "US 100 Cash CFD"
-        },
-        {
-          "proName": "FX_IDC:EURUSD",
-          "title": "EUR to USD"
-        },
-        {
-          "proName": "BITSTAMP:BTCUSD",
-          "title": "Bitcoin"
-        },
-        {
-          "proName": "BITSTAMP:ETHUSD",
-          "title": "Ethereum"
-        }
-      ],
-      "colorTheme": "light",
-      "locale": "en",
-      "largeChartUrl": "",
-      "isTransparent": false,
-      "showSymbolLogo": true,
-      "displayMode": "adaptive"
-    }
-    </script>
-  </div>
-  <!-- TradingView Widget END -->
-
-</body>
-</html>
-<!-- TradingView Widget BEGIN -->
+ <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/news-flow/?priority=top_stories" rel="noopener nofollow" target="_blank"><span class="blue-text">Top stories by TradingView</span></a></div>
@@ -60,7 +15,7 @@
   {
   "displayMode": "regular",
   "feedMode": "all_symbols",
-  "colorTheme": "light",
+  "colorTheme": "dark",
   "isTransparent": false,
   "locale": "en",
   "width": 400,
@@ -69,3 +24,4 @@
   </script>
 </div>
 <!-- TradingView Widget END -->
+
